--- a/input.css
+++ b/input.css
@@ -4,7 +4,7 @@
 
 body{
 
-background-image:url('./images/bg-tablet-pattern.svg');
+background-image:url('../images/bg-tablet-pattern.svg');
 background-repeat: no-repeat;
 background-size: 800px;
 /*background-position: 90% -25%; */
